[gd_scene load_steps=3 format=2]

[ext_resource path="res://ModifyRigContents.gd" type="Script" id=1]
[ext_resource path="res://Motherboard.tscn" type="PackedScene" id=2]

[node name="ModifyRigContents" type="Node2D"]
script = ExtResource( 1 )

[node name="partsTopLeft" type="Position2D" parent="."]
position = Vector2( 640.878, 1.22772 )

[node name="partsBottomRight" type="Position2D" parent="."]
position = Vector2( 1022.7, 594.224 )

[node name="motherboard" parent="." instance=ExtResource( 2 )]
cores = 3
memory = 2
modules = 4

[node name="partsPool" type="Node2D" parent="."]
position = Vector2( 640.878, 2.45547 )

